# person-identification-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/models/: enrollment.py  identification.py  motion.py
app/routers/: enrollment.py  health.py  identification.py  motion.py
app/services/: enrollment_store.py  face_engine.py  guest_store.py  image_annotator.py  motion_detector.py
config/: settings.yaml
kubernetes/base/: deployment.yaml  pvc.yaml  service.yaml
kubernetes/local/: deployment.yaml
