[project]
name = "person-identification-service"
version = "1.0.0"
description = "Face recognition and motion direction detection service for Cognitive Companion"
requires-python = ">=3.12,<3.13"
license = "AGPL-3.0"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "insightface>=0.7.3",
    "onnxruntime-gpu @ https://github.com/ultralytics/assets/releases/download/v0.0.0/onnxruntime_gpu-1.24.0-cp312-cp312-linux_aarch64.whl",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.24",
]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

# ── Ruff ─────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes (includes unused imports, undefined names)
    "I",     # isort
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade — modernize syntax
    "B",     # flake8-bugbear — common bug patterns
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking — move type-only imports behind TYPE_CHECKING
    "RUF",   # ruff-specific rules
    "PIE",   # flake8-pie — misc lint
    "PT",    # flake8-pytest-style
    "C4",    # flake8-comprehensions
    "T20",   # flake8-print — flag print() left in code
]
ignore = [
    "E501",    # line length handled by formatter
    "B008",    # Depends() in FastAPI param defaults is idiomatic
    "RUF002",  # en-dash in docstrings is intentional
    "RUF003",  # en-dash in comments is intentional
    "RUF012",  # ClassVar for mutable class attrs — too noisy for registries
    "TCH",     # type-checking imports — adopt incrementally
    "TC",      # type-checking imports (older alias)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ─────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = false                # too noisy with untyped third-party libs
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false          # too noisy for gradual adoption
no_implicit_optional = true
strict_equality = true
enable_error_code = ["import"]         # catches broken imports at type-check time
exclude = ["tests/", "\\.venv/"]

[[tool.mypy.overrides]]
module = [
    "insightface.*",
    "cv2.*",
    "numpy.*",
    "yaml.*",
    "uvicorn.*",
]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
